@@ -223,6 +223,7 @@ For more FileStorage info, you can check
 
     ::cv::filter2D src_matrix kernel_matrix ?anchor_x anchor_y delta borderType?
     ::cv::sepFilter2D src_matrix kernelX kernelY ?anchor_x anchor_y delta borderType?
+    ::cv::getDerivKernels dx dy ksize ?normalize ktype?
     ::cv::getGaborKernel ksize_width ksize_height sigma theta lambd gamma ?psi type?
     ::cv::getGaussianKernel ksize sigma ?type?
     ::cv::blur src_matrix ksize_width ksize_height ?anchor_x anchor_y borderType?
