@@ -1,5 +1,6 @@
 2021-10-12 Danilo Chang
 
+	* Implement command: getDerivKernels
 	* Implement command: findNonZero
 
 2021-10-11 Danilo Chang
